apps/flux-system/flux-operator/config/http-route.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: flux-operator
spec:
  hostnames:
    - flux.admin.reli.cc
  parentRefs:
    - name: envoy-admin
      namespace: network-system
      sectionName: https
  rules:
    - backendRefs:
        - name: flux-operator
          namespace: flux-system
          port: 9080
